--- a/editorials/VW04p_Checkout.ipynb
+++ b/editorials/VW04p_Checkout.ipynb
@@ -2,9 +2,13 @@
  "metadata": {
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python385jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
+   "display_name": "Python 3.8.5 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
@@ -12,15 +16,15 @@
  "cells": [
   {
    "source": [
-    "VW04p_Checkout  \n",
-    "Link: https://khmt.uit.edu.vn/wecode/algobootcamp/assignment/4/9  \n",
-    "Tóm tắt: Đoàn tàu chạy từ A sang B khoảng cách d, từ A tàu tăng vận tốc theo gia tốc $a_1$ đến một vận tốc không quá v, giữ nguyên vận tốc này trong thời gian ít nhất t và giảm vận tốc theo gia tốc $a_2$ để dừng tại B. Tính thời gian ngắn nhất để đoàn tàu đến B.  \n",
-    "Giải:  \n",
+    "## **[VW04p_Checkout](https://khmt.uit.edu.vn/wecode/algobootcamp/assignment/4/9)**  \n",
+    "### **Tóm tắt:**  \n",
+    "Đoàn tàu chạy từ A sang B khoảng cách d, từ A tàu tăng vận tốc theo gia tốc $a_1$ đến một vận tốc không quá v, giữ nguyên vận tốc này trong thời gian ít nhất t và giảm vận tốc theo gia tốc $a_2$ để dừng tại B. Tính thời gian ngắn nhất để đoàn tàu đến B.  \n",
+    "### **Giải:**  \n",
     "Greedy - Ưu tiên việc đạt đến vận tốc lớn nhất có thể.  \n",
     "Tính vận tốc $v_n$ cần thiết để thời gian chạy với vận tốc không đổi đúng bằng t. Có 2 TH:  \n",
     "    - Nếu $v_n$ > v. Ta sẽ tính thời gian với vận tốc v.  \n",
     "    - Ngược lại, tính thời gian với vận tốc $v_n$.  \n",
-    "Chứng minh:\n",
+    "### **Chứng minh:**\n",
     "Phương trình thời gian T trên vận tốc V:\n",
     "$$ T = t_1 + t_2 + \\frac{d - (\\frac{1}{2}a_1t_1^2)) - (-\\frac{1}{2}a_2t_2^2 + Vt_2)}{V} (*)$$\n",
     "Với $t_1$ là thời gian vận tốc tăng từ 0 lên V theo gia tốc $a_1$, $t_2$ là thời gian vận tốc giảm từ V về 0 theo gia tốc $a_2$.\n",
@@ -35,53 +39,28 @@
     "$T_l$, $T_h$ là thời gian tương ứng, ta cần chứng minh $T_l \\geq T_h$:\n",
     "$$ T_l - T_h = (v_h - v_l)(\\frac{d - (\\frac{v_lv_h}{2a_1}+\\frac{v_lv_h}{2a_2})}{v_lv_h}) $$\n",
     "$$ (**)\\ \\to T_l - T_h \\geq 0\\ \\text{(Điều cần chứng minh.)}$$  \n",
-    "Độ phức tạp: O(c).  \n",
-    "Code:"
+    "### **Độ phức tạp:** $O(c)$.\n",
+    "---\n",
+    "### **Code:**"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "source": [
+    "%cat ../code/VW04p_Checkout.cpp"
+   ],
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
+   "execution_count": 2,
    "outputs": [
     {
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\u001b[0;31m#include <bits/stdc++.h>\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0musing\u001b[0m \u001b[0mnamespace\u001b[0m \u001b[0mstd\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0mint\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;34m//\u001b[0m \u001b[0mFast\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mios\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msync_with_stdio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNULL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtie\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNULL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mdouble\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mcin\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0ma2\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mdouble\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdouble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdouble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mdouble\u001b[0m \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mdouble\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mdouble\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m        \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;34m}\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m        \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m        \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0ma2\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mcout\u001b[0m \u001b[0;34m<<\u001b[0m \u001b[0mfixed\u001b[0m \u001b[0;34m<<\u001b[0m \u001b[0msetprecision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<<\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m<<\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n"
-     ],
-     "name": "stdout"
+      "#include <bits/stdc++.h>\n\nusing namespace std;\n\nint main() {\n    // Fast I/O\n    ios::sync_with_stdio(false), cin.tie(NULL), cout.tie(NULL);\n\n    double d, a1, a2, v, t;\n    cin >> d >> a1 >> a2 >> v >> t;\n\n    double a = double(1) / 2 / a1 + double(1) / 2 / a2;\n    double delta = t * t + a * d * 4;\n\n    double x = (-t + sqrt(delta)) / 2 / a;\n    double result;\n    if (x < v) {\n        result = x / a1 + t + x / a2;\n    } else {\n        t = (d - v * v / 2 / a1 - v * v / 2 / a2) / v;\n        result = v / a1 + t + v / a2;\n    }\n\n    cout << fixed << setprecision(12) << result << '\\n';\n\n    return 0;\n}"
+     ]
     }
-   ],
-   "source": [
-    "%pycat ../code/VW04p_Checkout.cpp"
    ]
   }
  ]
