--- a/editorials/VW05p_Enrichement.ipynb
+++ b/editorials/VW05p_Enrichement.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **[Problem: VW05p_Enrichement](https://khmt.uit.edu.vn/wecode/algobootcamp/assignment/4/8 )**  \n",
+    "## **[VW05p_Enrichement](https://khmt.uit.edu.vn/wecode/algobootcamp/assignment/4/8 )**  \n",
     "\n",
-    "## **Tóm tắt:** \n",
+    "### **Tóm tắt:** \n",
     "  Cho một ma trận (nxm) có giá trị, tìm giá trị tổng nhỏ nhất của hình vuông 3x3 thuộc ma trận đã cho.  \n",
     "\n"
    ]
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Giải:**"
+    "### **Giải:**"
    ]
   },
   {
