--- a/editorials/VW04p_Checkout.ipynb
+++ b/editorials/VW04p_Checkout.ipynb
@@ -22,8 +22,8 @@
     "### **Giải:**  \n",
     "Greedy - Ưu tiên việc đạt đến vận tốc lớn nhất có thể.  \n",
     "Tính vận tốc $v_n$ cần thiết để thời gian chạy với vận tốc không đổi đúng bằng t. Có 2 TH:  \n",
-    " - Nếu $v_n$ > v. Ta sẽ tính thời gian với vận tốc v.  \n",
-    " - Ngược lại, tính thời gian với vận tốc $v_n$.  \n",
+    "  Nếu $v_n$ > v. Ta sẽ tính thời gian với vận tốc v.  \n",
+    "  Ngược lại, tính thời gian với vận tốc $v_n$.  \n",
     "### **Chứng minh:**  \n",
     "Phương trình thời gian T trên vận tốc V:\n",
     "$$ T = t_1 + t_2 + \\frac{d - (\\frac{1}{2}a_1t_1^2)) - (-\\frac{1}{2}a_2t_2^2 + Vt_2)}{V} (*)$$\n",
