--- a/editorials/VW07p_Vitamin.ipynb
+++ b/editorials/VW07p_Vitamin.ipynb
@@ -7,11 +7,44 @@
     "## **[VW07p_Vitamin](https://khmt.uit.edu.vn/wecode/algobootcamp/assignment/4/10)**\n",
     "\n",
     "### **Tóm tắt:** \n",
-    "Cho mảng A có thể kéo dài:\n",
-    "$$A_1,A_2,A_3 \\dots A_n,A_n,A_n \\dots(1 \\leq A_i \\leq 1000,\\ i = 1 \\div n)$$\n",
-    "Tìm độ dài ngắn nhất của mảng B tạo từ các prefix của mảng A (các prefix cách nhau bởi số 0) có tổng là x.  \n",
+    "Cho mảng a và $X$:\n",
+    "$$a_1,a_2,a_3 \\dots a_n \\quad (1 \\leq a_i \\leq 1000,\\ i = 1 \\dots n)$$\n",
     "\n",
-    "### **Giải:**\n",
+    "Gọi $A_i = \\begin{cases} \\sum_{k = 1}^{i}a_k \\quad &\\text{if } 1 \\leq i \\leq n \\\\ A_n + \\sum_{k = n + 1}^{i}a_n \\quad &\\text{if } i > n   \\end{cases}$ , với ý nghĩa $A_i$ là tổng số vitamin được tạo ra khi làm trong $i$ giờ liên tục. \n",
+    "\n",
+    "Yêu cầu của đề bài có thể phát biểu là tìm một tập con có các phần tử có thể lặp lại $S = \\{A_{i_1},A_{i_2}, \\dots, A_{i_h}\\}, (1 \\leq i_1,i_2, \\dots, i_h \\leq n) $ của mảng $A$ sao cho $\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum A_i = X$ và $\\left[\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum (i + 1) \\right] - 1$ là nhỏ nhất.\n",
+    "\n",
+    "**Hay**\n",
+    "\n",
+    "Viết lại theo dạng công thức như sau:\n",
+    "$$\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "& \\underset{x}{\\text{minimize}}\n",
+    "& & \\left[\\sum_{i = 1}^{\\infty}x_i(i + 1) \\right] - 1 \\\\\n",
+    "& \\text{subject to}\n",
+    "& & x_i \\geq 0,\\, i = 1,\\dots, \\infty \\\\\n",
+    "& & &\\sum_{i = 1}^{\\infty}x_iA_i = X \n",
+    "\\end{aligned}\n",
+    "\\end{equation*}$$\n",
+    "**Trong đó :** $x_i$ là số lần lặp lại của $A_i$.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Giải: (Huy)**\n",
+    "\n",
     "Dynamic Programming - Gọi dp\\[i\\] là độ dài ngắn nhất của mảng B với tổng là i, với trường hợp prefix A có độ dài không quá n:\n",
     "$$dp[i] = min(dp[i-\\text{prefix_sum_of_A[0..j]}+1+j];\\ j = 1 \\div n)$$\n",
     "Trường hợp tồn tại prefix A có độ dài lớn hơn n:\n",
@@ -59,15 +92,6 @@
     "    return 0;\n",
     "}\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Tests;;;;;"
    ]
   }
  ],
