--- a/editorials/VW07p_Vitamin.ipynb
+++ b/editorials/VW07p_Vitamin.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Gọi $A_i = \\begin{cases} \\sum_{k = 1}^{i}a_k \\quad &\\text{if } 1 \\leq i \\leq n \\\\ A_n + \\sum_{k = n + 1}^{i}a_n \\quad &\\text{if } i > n   \\end{cases}$ , với ý nghĩa $A_i$ là tổng số vitamin được tạo ra khi làm trong $i$ giờ liên tục. \n",
     "\n",
-    "Yêu cầu của đề bài có thể phát biểu là tìm một tập con có các phần tử có thể lặp lại $S = \\{A_{i_1},A_{i_2}, \\dots, A_{i_h}\\}, (1 \\leq i_1,i_2, \\dots, i_h \\leq n) $ của mảng $A$ sao cho $\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum A_i = X$ và $\\left[\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum (i + 1) \\right] - 1$ là nhỏ nhất.\n",
+    "Yêu cầu của đề bài có thể phát biểu là tìm một tập con có các phần tử có thể lặp lại $S = \\{A_{i_1},A_{i_2}, \\dots, A_{i_h}\\}, (i_1,i_2, \\dots, i_h \\geq 1) $ của mảng $A$ sao cho $\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum A_i = X$ và $\\left[\\underset{i \\in \\{i_1,i_2,\\dots,i_h\\}}\\sum (i + 1) \\right] - 1$ là nhỏ nhất.\n",
     "\n",
     "**Hay**\n",
     "\n",
@@ -22,7 +22,7 @@
     "& \\underset{x}{\\text{minimize}}\n",
     "& & \\left[\\sum_{i = 1}^{\\infty}x_i(i + 1) \\right] - 1 \\\\\n",
     "& \\text{subject to}\n",
-    "& & x_i \\geq 0,\\, i = 1,\\dots, \\infty \\\\\n",
+    "& & x_i \\geq 0,\\, x_i \\in \\mathbb{Z} \\\\\n",
     "& & &\\sum_{i = 1}^{\\infty}x_iA_i = X \n",
     "\\end{aligned}\n",
     "\\end{equation*}$$\n",
@@ -33,11 +33,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **Giải: (Khang)**\n",
+    "\n",
+    "### **1. Thuật toán (Brute force) :**\n",
+    "- Tạo mảng $A_1, A_2, \\dots, A_m$ (bằng công thức ở trên) với $A_m$ lớn nhất và $A_m \\leq X$.\n",
+    "- Thử tất cả tập con có thế lặp lại cúa $\\{A_1,A_2,\\dots,A_m \\}$ sao cho \n",
+    "\n",
+    "### **2. Thuật toán (Dynamic Programming):**\n",
+    "- #### **2.1 Bài toán Unbounded Change-making:** \n",
+    "    Cho $n$ đồ vật và một cái túi có khối lượng $K$. Mỗi vật có khối lượng là $w_i$ và giá trị là $v_i$. Hãy tìm cách chọn các đố vật bỏ vào túi sao cho tổng các khối lượng các vật đúng bằng $K$ (mỗi vật có thể chọn nhiều lần) và tổng giá trị của các đồ vật được chọn là nhỏ nhất?    \n",
+    "    + **Quy hoạch động:** \n",
+    "        Gọi $f[W]$ là tổng giá trị nhỏ nhất khi chọn các vật khối lượng sao cho có tổng là $W$.\n",
+    "        \n",
+    "        Khi xét đến vật thứ $i$ thì sẽ có 2 trường hợp để cập nhật công thức cho $f[W]$\n",
+    "            \n",
+    "         + **Trường hợp 1:** Nếu không chọn vật thứ $i$ thì $f[W]$ sẽ được giữ nguyên.\n",
+    "         + **Trường hợp 2:** Nếu chọn vật thứ $i$ thì $f[W] = f[W - w_i] + v_i$.\n",
+    "       \n",
+    "      Tổng hợp từ 2 trường hợp, ta có công thức cập nhật: $$f[W] = min(f[W],f[W - w_i] + v_i), (1 \\leq W \\leq K, 1 \\leq i \\leq n)$$\n",
+    "      \n",
+    "      **Khởi tạo:** $f[0] = 0$, $f[W] = \\infty, (1 \\leq W \\leq K)$.\n",
+    "      \n",
+    "      **Đáp án:** $f[K]$.\n",
+    "      \n",
+    "      **Code:** \n",
+    "       > ```cpp \n",
+    "       >  f[0] = 0;\n",
+    "       >  for (int W = 1; W <= K; W++) f[W] = INF;\n",
+    "       >\n",
+    "       >  for (int i = 1; i <= n; i++)\n",
+    "       >      for (int W = a[i]; W <= K; W++)\n",
+    "       >          f[W] = min(f[W],f[W - w[i]] + v[i]);\n",
+    "       >  ```\n",
+    "      \n",
+    "      **Độ phức tạp:** $O(nK)$.\n",
+    "      \n",
+    "- #### **2.2 Thuật toán** $O(nX + \\frac{X}{a_n}X)$:\n",
+    "    - Tạo mảng $A_1, A_2, \\dots, A_m$ (bằng công thức ở trên) với $A_m$ lớn nhất và $A_m \\leq X$.\n",
+    "    \n",
+    "    - Liên hệ với bài toán **Unbounded Change-making**, xem các $A_i, (i = 1,\\dots, m)$ là khối lượng của các đồ vật\n",
+    "      còn các giá trị $v_i = i + 1, (i = 1,\\dots,m)$ và túi có khối lượng $X$.\n",
+    "    \n",
+    "    - Kết quả: $f[X] - 1$\n",
+    "      \n",
+    "    - **Code:**\n",
+    "    > ```cpp\n",
+    "    >       #include <bits/stdc++.h>\n",
+    "    >       using namespace std;\n",
+    "    >       const int INF = int(1e9) + 10;\n",
+    "    >       int n, X;\n",
+    "    >       vector<int> a;\n",
+    "    >       vector<int> A;\n",
+    "    >       vector<int> dp;\n",
+    "    >\n",
+    "    >       int main(){\n",
+    "    >           ios::sync_with_stdio(0); cin.tie(0); cout.tie(0);\n",
+    "    >           cin >> n >> X;\n",
+    "    >\n",
+    "    >           a.resize(n + 1);\n",
+    "    >           A.resize(n + 1);\n",
+    "    >\n",
+    "    >            for (int i = 1; i <= n; i++){\n",
+    "    >               cin  >> a[i];\n",
+    "    >               A[i] = A[i - 1] + a[i];\n",
+    "    >           }\n",
+    "    >\n",
+    "    >           while (A.back() + a[n] <= X){\n",
+    "    >               A.push_back(A.back() + a[n]);\n",
+    "    >           }\n",
+    "    >\n",
+    "    >           dp.assign(X + 1,INF);\n",
+    "    >           dp[0] = 0;\n",
+    "    >\n",
+    "    >           int m = A.size() - 1;\n",
+    "    >           for (int i = 1; i <= m; i++)\n",
+    "    >               for (int j = A[i]; j <= X; j++) dp[j] = min(dp[j],dp[j - A[i]] + i + 1);\n",
+    "    >                                         \n",
+    "    >            if (dp[X] >= INF) cout << -1;\n",
+    "    >            else cout << dp[X] - 1;\n",
+    "    >            return 0;\n",
+    "    >        }\n",
+    "    >    ```\n",
+    "\n",
+    "- #### **2.3 Thuật toán** $O(Xn)$:    \n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
