--- a/Warm-Up/editorials/VW07p_Vitamin.ipynb
+++ b/Warm-Up/editorials/VW07p_Vitamin.ipynb
@@ -45,6 +45,7 @@
     "    - **Code:**\n",
     "    \n",
     "    >```cpp\n",
+    "    >\n",
     "    >   ans = INF;\n",
     "    >   void brute_force(int i, int W, int V){\n",
     "    >       if (i == m + 1){\n",
@@ -58,7 +59,8 @@
     "    >           if (W + j*A[i] <= X) brute_force(i + 1,W + j*A[i],V + (j + 1));\n",
     "    >   }\n",
     "    >\n",
-    "    >   brute_force(1,0,0);   \n",
+    "    >   brute_force(1,0,0);\n",
+    "    >   \n",
     "    >```\n",
     "\n",
     "### **2. Thuật toán (Dynamic Programming):**\n",
@@ -80,12 +82,14 @@
     "      \n",
     "      **Code:** \n",
     "       > ```cpp \n",
+    "       >\n",
     "       >    f[0] = 0;\n",
     "       >    for (int W = 1; W <= K; W++) f[W] = INF;\n",
     "       >\n",
     "       >    for (int i = 1; i <= n; i++)\n",
     "       >        for (int W = w[i]; W <= K; W++)\n",
     "       >            f[W] = min(f[W],f[W - w[i]] + v[i]);\n",
+    "       >\n",
     "       >  ```\n",
     "      \n",
     "      **Độ phức tạp:** $O(nK)$.\n",
@@ -100,6 +104,7 @@
     "      \n",
     "    - **Code:**\n",
     "        > ```cpp\n",
+    "        >\n",
     "        >    #include <bits/stdc++.h>\n",
     "        >    using namespace std;\n",
     "        >    const int INF = int(1e9) + 10;\n",
@@ -135,6 +140,7 @@
     "        >        else cout << dp[X] - 1;\n",
     "        >        return 0;\n",
     "        >    }\n",
+    "        >\n",
     "        > ```\n",
     "    \n",
     "- #### **2.3 Thuật toán** $O(Xn)$:    \n",
@@ -166,6 +172,7 @@
     "    \n",
     "    - **Code:**\n",
     "    >```cpp\n",
+    "    >\n",
     "    >   #include <bits/stdc++.h>\n",
     "    >   using namespace std;\n",
     "    >   const int INF = int(1e9) + 10;\n",
@@ -203,28 +210,23 @@
     "    > \n",
     "    >       return 0;\n",
     "    >   }\n",
+    "    >\n",
     "    ```\n",
     "    \n"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.4 64-bit",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": ""
   }
  },
  "nbformat": 4,
