--- a/Warm-Up/editorials/VW07p_Vitamin.ipynb
+++ b/Warm-Up/editorials/VW07p_Vitamin.ipynb
@@ -45,7 +45,6 @@
     "    - **Code:**\n",
     "    \n",
     "    >```cpp\n",
-    "    >\n",
     "    >   ans = INF;\n",
     "    >   void brute_force(int i, int W, int V){\n",
     "    >       if (i == m + 1){\n",
@@ -60,7 +59,6 @@
     "    >   }\n",
     "    >\n",
     "    >   brute_force(1,0,0);\n",
-    "    >   \n",
     "    >```\n",
     "\n",
     "### **2. Thuật toán (Dynamic Programming):**\n",
@@ -81,16 +79,14 @@
     "      **Đáp án:** $f[K]$.\n",
     "      \n",
     "      **Code:** \n",
-    "       > ```cpp \n",
-    "       >\n",
-    "       >    f[0] = 0;\n",
-    "       >    for (int W = 1; W <= K; W++) f[W] = INF;\n",
-    "       >\n",
-    "       >    for (int i = 1; i <= n; i++)\n",
-    "       >        for (int W = w[i]; W <= K; W++)\n",
-    "       >            f[W] = min(f[W],f[W - w[i]] + v[i]);\n",
-    "       >\n",
-    "       >  ```\n",
+    "        >```cpp \n",
+    "        >   f[0] = 0;\n",
+    "        >   for (int W = 1; W <= K; W++) f[W] = INF;\n",
+    "        >\n",
+    "        >   for (int i = 1; i <= n; i++)\n",
+    "        >       for (int W = w[i]; W <= K; W++)\n",
+    "        >           f[W] = min(f[W],f[W - w[i]] + v[i]);\n",
+    "        >```\n",
     "      \n",
     "      **Độ phức tạp:** $O(nK)$.\n",
     "      \n",
@@ -103,45 +99,43 @@
     "    - Kết quả: $f[X] - 1$\n",
     "      \n",
     "    - **Code:**\n",
-    "        > ```cpp\n",
+    "        >```cpp\n",
+    "        >   #include <bits/stdc++.h>\n",
+    "        >   using namespace std;\n",
+    "        >   const int INF = int(1e9) + 10;\n",
+    "        >   int n, X;\n",
+    "        >   vector<int> a;\n",
+    "        >   vector<int> A;\n",
+    "        >   vector<int> dp;\n",
     "        >\n",
-    "        >    #include <bits/stdc++.h>\n",
-    "        >    using namespace std;\n",
-    "        >    const int INF = int(1e9) + 10;\n",
-    "        >    int n, X;\n",
-    "        >    vector<int> a;\n",
-    "        >    vector<int> A;\n",
-    "        >    vector<int> dp;\n",
+    "        >   int main(){\n",
+    "        >       ios::sync_with_stdio(0); cin.tie(0); cout.tie(0);\n",
+    "        >       cin >> n >> X;\n",
     "        >\n",
-    "        >    int main(){\n",
-    "        >        ios::sync_with_stdio(0); cin.tie(0); cout.tie(0);\n",
-    "        >        cin >> n >> X;\n",
+    "        >       a.resize(n + 1);\n",
+    "        >       A.resize(n + 1);\n",
     "        >\n",
-    "        >        a.resize(n + 1);\n",
-    "        >        A.resize(n + 1);\n",
+    "        >       for (int i = 1; i <= n; i++){\n",
+    "        >           cin  >> a[i];\n",
+    "        >           A[i] = A[i - 1] + a[i];\n",
+    "        >       }\n",
     "        >\n",
-    "        >        for (int i = 1; i <= n; i++){\n",
-    "        >            cin  >> a[i];\n",
-    "        >            A[i] = A[i - 1] + a[i];\n",
-    "        >        }\n",
+    "        >       while (A.back() + a[n] <= X){\n",
+    "        >           A.push_back(A.back() + a[n]);\n",
+    "        >       }\n",
     "        >\n",
-    "        >        while (A.back() + a[n] <= X){\n",
-    "        >            A.push_back(A.back() + a[n]);\n",
-    "        >        }\n",
+    "        >       dp.assign(X + 1,INF);\n",
+    "        >       dp[0] = 0;\n",
     "        >\n",
-    "        >        dp.assign(X + 1,INF);\n",
-    "        >        dp[0] = 0;\n",
-    "        >\n",
-    "        >        int m = A.size() - 1;\n",
-    "        >        for (int i = 1; i <= m; i++)\n",
-    "        >            for (int j = A[i]; j <= X; j++) dp[j] = min(dp[j],dp[j - A[i]] + i + 1);\n",
-    "        >                                         \n",
-    "        >        if (dp[X] >= INF) cout << -1;\n",
-    "        >        else cout << dp[X] - 1;\n",
-    "        >        return 0;\n",
-    "        >    }\n",
-    "        >\n",
-    "        > ```\n",
+    "        >       int m = A.size() - 1;\n",
+    "        >       for (int i = 1; i <= m; i++)\n",
+    "        >           for (int j = A[i]; j <= X; j++) dp[j] = min(dp[j],dp[j - A[i]] + i + 1);\n",
+    "        >                                        \n",
+    "        >       if (dp[X] >= INF) cout << -1;\n",
+    "        >       else cout << dp[X] - 1;\n",
+    "        >       return 0;\n",
+    "        >   }\n",
+    "        >```\n",
     "    \n",
     "- #### **2.3 Thuật toán** $O(Xn)$:    \n",
     "    - Từ thuật toán ở phần **2.2** thì phần tốn thời gian nhiều nhất chính là tạo ra thêm các $A_i$ với $i > n$. Vậy, làm sao để giảm việc tạo ra các $A_i$ ?\n",
@@ -172,7 +166,6 @@
     "    \n",
     "    - **Code:**\n",
     "    >```cpp\n",
-    "    >\n",
     "    >   #include <bits/stdc++.h>\n",
     "    >   using namespace std;\n",
     "    >   const int INF = int(1e9) + 10;\n",
@@ -189,7 +182,7 @@
     "    >       for (int i = 1; i <= n; i++){\n",
     "    >           cin  >> a[i];\n",
     "    >           A[i] = A[i - 1] + a[i];\n",
-    "    >       }\n",
+    "    >      }\n",
     "    >\n",
     "    >       f.resize(X + 1);\n",
     "    >       f[0] = 0;\n",
@@ -197,7 +190,7 @@
     "    >\n",
     "    >       for (int i = 1; i <= n; i++)\n",
     "    >           for (int W = A[i]; W <= X; W++)\n",
-    "    >               f[W] = min(f[W],f[W - A[i]] + (i + 1));\n",
+    "    >              f[W] = min(f[W],f[W - A[i]] + (i + 1));\n",
     "    > \n",
     "    >       if (X > A[n]){\n",
     "    >           for (int W = 0; W + A[n] <= X; W++)\n",
@@ -210,9 +203,7 @@
     "    > \n",
     "    >       return 0;\n",
     "    >   }\n",
-    "    >\n",
-    "    ```\n",
-    "    \n"
+    "    >```"
    ]
   }
  ],
@@ -221,12 +212,21 @@
    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
